test/bad/functions/return01.px

func f() Int def
    return true

f()
